syntax = "proto3";

option csharp_namespace = "CsharpDapperExample";

service Products {
  rpc GetProduct (GetProductRequest) returns (ProductModel);
  rpc GetAllProducts (GetAllProductsRequest) returns (AllProductsResponse);

  rpc AddProduct (AddProductRequest) returns(ProductModel);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductModel);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message GetProductRequest {
  int32 ProductId = 1;
}

message GetAllProductsRequest {

}

message AllProductsResponse {
  repeated ProductModel ProductModel= 1;
}

message AddProductRequest {
  ProductModel Product = 1;
}

message UpdateProductRequest {
  ProductModel Product = 1;
}

message DeleteProductRequest {
  int32 ProductId = 1;
}

message DeleteProductResponse {

}

message ProductModel{
  int32 ProductId = 1;
  string name = 2;
  float Price = 3;
  string Description = 4;
  int32 categoryId = 5;
}
    